<resources>
    <string name="app_name">History of Cinema</string>
    <string name="quotes" translatable="false">\"\"</string>
    <string name="unknown_error">An error occurred, please try again.</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="youtube_link" translatable="false">https://www.youtube.com/watch?v=%1s</string>
    <string name="youtube_image_link" translatable="false">https://img.youtube.com/vi/%1s/0.jpg</string>
    <string name="twitter_link" translatable="false">https://twitter.com/%1s</string>
    <string name="instagram_link" translatable="false">https://instagram.com/%1s</string>
    <string name="facebook_link" translatable="false">https://www.facebook.com/%1s</string>
    <string name="imdb_link" translatable="false">https://www.imdb.com/title/%1s</string>
    <string name="tomatoes_link" translatable="false">https://www.rottentomatoes.com/</string>
    <string name="tmdb_link" translatable="false">https://www.themoviedb.org/movie/%1d</string>
    <string name="metacritic_link" translatable="false">http://www.metacritic.com/</string>
    <string name="imdb_person_link" translatable="false">https://www.imdb.com/name/%1s</string>
    <string name="imdb_awards_link" translatable="false">https://www.imdb.com/name/%1s/awards</string>
    <string name="history_cinema_title">History of Cinema</string>
    <string name="mil_movies_title">1001 Movies</string>
    <string name="mil_movies_title_v2">1001 Movies you Must see Before you Die</string>
    <string name="timeline_title">Timeline Of Cinema</string>
    <string name="awards_title">Film award</string>
    <string name="directors_title">Directors</string>
    <string name="powerd_tmdb" translatable="false">powered by TMDB</string>
    <string name="source_tmdb">Source: TMDB</string>
    <string name="selected_reference_type">Select the reference type</string>
    <string name="selected_year">Select the year</string>
    <string name="winner">Winner</string>
    <string name="start">Start</string>
    <string name="try_again">Try Again</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="is_new">New</string>
    <string name="movies">Movies</string>
    <string name="timeline">Timeline</string>
    <string name="share_title">Share with:</string>
    <string name="sumario">Summary</string>
    <string name="next">Next</string>
    <string name="click_here_to_go">Click here to access</string>
    <string name="share_history_page_description">Know more about %1s on the History of Cinema App. %2s</string>
    <string name="share_timeline_description">Know more about the main events on the History of Cinema App. %1s</string>
    <string name="recomendation">Additional Reading</string>
    <string name="action_about">About</string>
    <string name="action_reference">References</string>
    <string name="action_language">Language: %1$s (tap to change)</string>
    <string name="action_theme">Light or dark theme</string>
    <string name="action_glossary">Glossary</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_references">References and Suggestions</string>
    <string name="activity_glossary">Glossary</string>
    <string name="language_title">Language</string>
    <string name="language_app_title">History Pages Language</string>
    <string name="general_title">General</string>
    <string name="references_bibliographic_title">References</string>
    <string name="references_bibliographic_description">Books, links, articles. The base reference for this app.</string>
    <string name="glossary_description">Terms and definitions in the cinema world.</string>
    <string name="activity_about">About</string>
    <string name="buy">Buy</string>
    <string name="contact_us">Get in Touch</string>
    <string name="email" translatable="false">tiago.hsilva@gmail.com</string>
    <string name="credits_terms">Credits and Terms</string>
    <string name="tmdb_notice" translatable="false">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>
    <string name="about_free_culture">Culture is free. Long live cinema.</string>
    <string name="credits_tmdb">Movie and people information and images: TMDB</string>
    <string name="credits_omdb">Ratings and additional movie data: OMDb API</string>
    <string name="credits_awards">Awards data: Wikipedia (CC BY-SA 4.0) and Wikidata (CC0)</string>
    <string name="credits_youtube">Videos: YouTube. Videos belong to their respective owners.</string>
    <string name="credits_awards_link" translatable="false">https://www.wikidata.org/wiki/Wikidata:Licensing</string>
    <string name="credits_youtube_link" translatable="false">https://www.youtube.com/t/terms</string>
    <string name="tmdb_terms_link" translatable="false">https://www.themoviedb.org/terms-of-use</string>
    <string name="tmdb_terms_title">TMDB Terms of Use</string>
    <string name="tmdb_api_terms_title">TMDB API Terms Of Use</string>
    <string name="tmdb_api_terms_link" translatable="false">https://www.themoviedb.org/api-terms-of-use</string>
    <string name="omdb_api_terms_title">OMDB API Terms Of Use</string>
    <string name="omdb_api_terms_link" translatable="false">https://www.omdbapi.com/legal.htm</string>
    <string name="version">Version %1s</string>
    <string name="responsable">App Development and Search by Tiago Silva</string>
    <string name="terms">Terms of Use</string>
    <string name="terms_link" translatable="false">https://website-cb5.pages.dev/cinema-history/termos/</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_link" translatable="false">https://website-cb5.pages.dev/cinema-history/privacidade/</string>
    <string name="creative_commons" translatable="false">Creative Commons — Atribuição 3.0 Brasil — CC BY 3.0 BR</string>
    <string name="creative_commons_link" translatable="false">https://creativecommons.org/licenses/by/3.0/br/</string>
    <string name="app_description">%1s is a free app that tells the history of cinema in a fun, intuitive way, from the first Lumière screening to the present day. Explore 8 eras of film history, awards since 1929, an interactive timeline, the 1001 movies to see before you die, great directors and a glossary of film terms, in Portuguese, English and Spanish, with light and dark themes. In Brazil, chapters can also be heard with audio narration. Everything is based on books and documentaries, adapted to this new medium. Have fun!</string>
    <string name="start_journey">Start your Journey</string>
    <string name="home_title_1">The History of</string>
    <string name="home_title_2">Cinema</string>
    <string name="home_awards_title">Film award</string>
    <string name="home_awards_subtitle">The Most Important Film Award Shows</string>
    <string name="home_milmovies_title">1001 Movies</string>
    <string name="home_milmovies_subtitle">you Must see Before you Die</string>
    <string name="home_milmovies_description">From the classic to the underground, cult to the noir, terror to the romance, see here the greatest films of all time that touched peoples around the world.</string>
    <string name="home_timeline_title">Timeline of Cinema</string>
    <string name="home_timeline_description">The main events in the world of cinema organized chronologically.</string>
    <string name="home_directors_title">Masters of Cinema</string>
    <string name="home_directors_description">Get to know in detail the greatest cinema directors</string>
    <string name="pick_your_journey">Pick your Journey</string>
    <string name="should_see">You should see…</string>
    <string name="should_know">You should know…</string>
    <string name="also_format">also %1s</string>
    <string name="as_format">as %1s</string>
    <string name="runtime_format" translatable="false">%1dh %2dm</string>
    <string name="country_format">Country: %1s</string>
    <string name="original_title_format" translatable="false">%1s (%2d)</string>
    <string name="directors">Directed by: </string>
    <string name="write_by">Writer by: </string>
    <string name="language_original">Original Language: </string>
    <string name="duration">Duration: </string>
    <string name="release">Release: </string>
    <string name="media">Media</string>
    <string name="cast">Cast</string>
    <string name="reviews">Critic Reviews</string>
    <string name="crew">Crew</string>
    <string name="production">Production</string>
    <string name="sinopsys">Plot</string>
    <string name="orcamento">Budget</string>
    <string name="receita">Box Office</string>
    <string name="biography">Biography</string>
    <string name="filmography">Filmography</string>
    <string name="director_profile">Director Profile</string>
    <string name="interviews">Interviews</string>
    <string name="no_summary">The plot is unknown.</string>
    <string name="review_details_site_date" translatable="false">%1$s · %2$s</string>
    <string name="review_click_here">Click here to read the full Review</string>
    <string name="director_collection_title">The director %1s is known for…</string>
    <string name="collection_title">%1s Collection</string>
    <string name="tmdb_vote" translatable="false">%1s/10</string>
    <string name="watch_on">Watch on</string>
    <string name="did_you_know">Did yout Know?</string>
    <string name="best_picture">Best Picture</string>
    <string name="description_logo_app">Application Logo</string>
    <string name="hitory_image_description">Poster from the movie Chinatown, with the main character.</string>
    <string name="mil_movies_image_description">Poster from the movie Godfather, with one hand holding a rope, using it on puppet dolls.</string>
    <string name="directors_image_description">Personalized poster with the face of David Fincher, mixed with several characters from his films.</string>
    <string name="timeline_image_description">Photo of a roll film.</string>
    <string name="movie_backdrop_description">Photo or scene from the movie %1s.</string>
    <string name="movie_poster_description">Poster from the movie %1s.</string>
    <string name="movie_video_description">Picture of a Scene from the trailer of %1s.</string>
    <string name="movie_company_image_description">Logo from the Company %1s.</string>
    <string name="person_photo_description">Profile picture of %1s.</string>
    <string name="essay_title">Essay</string>
    <string name="language_system">Automatic (device language)</string>
    <string name="movie_link_mil_movies_subtitle">%1$s is on the list</string>
    <string name="movie_link_mil_movies_title">1001 Movies You Must See Before You Die %1$s</string>
    <string name="movie_link_history_subtitle">Read more about the period when %1$s was released</string>
    <string name="movie_link_history_title">The History of Cinema %1$s</string>
    <string name="reference_media_type_book">Book</string>
    <string name="reference_media_type_series">Series</string>
    <string name="reference_media_type_movie">Movie</string>
    <string name="reference_media_type_youtube">YouTube</string>
    <string name="ad_badge">Ad</string>
    <string name="ad_privacy_title">Ad privacy</string>
    <string name="ad_privacy_summary">Review or change your ad consent choices</string>
    <string name="home_section_eras_title">Eras of cinema</string>
    <string name="home_section_eras_subtitle">A journey through film history in %1$d parts</string>
    <string name="home_see_all">See all</string>
    <string name="home_continue_reading">Continue reading</string>
    <string name="award_choose_decade">Jump to a decade</string>
    <string name="award_year_error">Couldn\'t load this year.</string>
    <string name="award_retry">Try again</string>
</resources>