<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        app:key="language_category"
        app:title="@string/language_title">

        <!-- Opções preenchidas em código a partir de ContentLanguage.ENABLED (SettingPreferenceFragment).
             Títulos e sinopses de filmes seguem o mesmo idioma. -->
        <androidx.preference.ListPreference
            app:key="language_app"
            app:title="@string/language_app_title"
            app:summary="%s"
            app:icon="@drawable/ic_language_grey_24dp"
            app:persistent="false"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="help_category"
        app:title="@string/general_title">

        <androidx.preference.Preference
            app:key="references"
            app:summary="@string/references_bibliographic_description"
            app:title="@string/references_bibliographic_title"
            app:icon="@drawable/ic_open_book_grey_24dp"
            app:selectable="true" />

        <androidx.preference.Preference
            app:key="glossary"
            app:summary="@string/glossary_description"
            app:title="@string/activity_glossary"
            app:icon="@drawable/ic_library_books_grey"
            app:selectable="true" />

        <androidx.preference.Preference
            app:key="about"
            app:title="@string/action_about"
            app:icon="@drawable/ic_info_grey_24dp"
            app:selectable="true"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>